# hallmoot

./: .gitignore  Makefile  README.md  chat.py  hallmoot.py  llm.py  pyproject.toml  ws.py
convos/: m.yml
examples/: README.md
examples/c_hello/: Makefile  hello.c
examples/python_calc/: Makefile  calc.py
src/hallmoot/: __init__.py  tools.py
