[project]
name = "hallmoot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "@val314159", email = "jmward@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docopt>=0.6.2",
    "ollama>=0.6.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
